--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>데헷!</title>
+    <title>ㅎㅇㅎㅇ</title>
+
+    <meta property="og:title" content="Favicon, OG Test" />
+    <meta property="og:description" content="복붙 달다" />
+    <meta
+      property="og:image"
+      content="https://github.com/Juyoung8563/250120_review/blob/main/nir-himi-A94bN7z4w0E-unsplash.jpg?raw=true"
+    />
 
     <link
       rel="icon"
